--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./bootstrap.min.css">
 </head>
 
-<body>
+<body >
   
   <nav class="navbar">
     <div class="navbar-container">
@@ -31,14 +31,14 @@
     </div>
   </nav>
 
-  <section class="showcase-area" id="home">
-    <div class="showcase-container">
-      <br>
-      <a class="btn btn-primary">Programa tu cita</a>
-      <p>20% de descuento en todos nuestros servicios</p>
+  <section class="jumbotron" id="home">
+    <div class="showcase-area">
+      <p> Dale un giro a tu beleza y unete a las filas de Byestres </p>
+      <a class="btn btn-primary">Dale un giro a tu belleza</a>
+      <div class="fontfam">20% de descuento en todos nuestros servicios</div>
     </div>
   </section>
-  <br><br>
+  
 
   <section id="salon"> 
     <div class="titulo">Nuestros servicios</div>
@@ -46,20 +46,20 @@
     <div class="flex-container">
       <div class="salon-type">
         <div class="img-container">
-          <img src="./img/promo.jpg" />
+          <img src="./img/promo3.jpg" >
           <div class="img-content">
-            <h3>Unas</h3>
-            <h1 class="btn btn-primary" target="click">aprende mas</h1>
+            <h3>Uñas</h3>
+            <h1 class="btn btn-primary" target="click">aprende más</h1>
           </div>
         </div>
       </div>
 
       <div class="salon-type">
         <div class="img-container">
-          <img src="./img/pestanas.jpg" />
+          <img src="./img/promo.jpg" />
           <div class="img-content">
-            <h3>Pestanias</h3>
-            <h1 class="btn btn-primary" target="click">dime mas</h1>
+            <h3>Pestañas</h3>
+            <h1 class="btn btn-primary" target="click">dime más</h1>
           </div>
         </div>
       </div>
@@ -69,7 +69,7 @@
           <img src="./img/promo2.JPG" />
           <div class="img-content">
             <h3>Otros</h3>
-            <h1 class="btn btn-primary" target="click">muestra mas</h1>
+            <h1 class="btn btn-primary" target="click">muestra más</h1>
           </div>
         </div>
       </div>
@@ -80,13 +80,11 @@
   <section id="about">
     <div class="about-wrapper">
       <div class="about-text">
-        <h2>Somos una empresa dedicada a la belleza de la mujer!</h2>
-        <br>
-        <p>
-          Nos apaciona atender a nuestros clientes porque nuestro sproductos son de alta calidad.
-          Nuestros productos se diferencias de otros porque utilizamos un producto que dura mas tiempo.
-        </p>
-        
+        <div class="fontfam"><h2>Somos una empresa dedicada a servicios de belleza</h2>
+          <br><p>
+            Nuestors clientes es lo mas importante y nos apaciona mostrarles nuesttros productos, los cuales son de alta calidad, y garantizados por dos meses.  
+            es esto lo que caracteriza a Byestres y por cual los clientes nos prefieren. </p>
+      </div>        
       </div>
       <img  src="./img/unas.jpg" width="500" height="auto" >
     </div>
