--- a/index.html
+++ b/index.html
@@ -33,14 +33,17 @@
 
   <section class="jumbotron" id="home">
     <div class="showcase-area">
-      <p> Dale un giro a tu beleza y unete a las filas de Byestres </p>
-      <a class="btn btn-primary">Dale un giro a tu belleza</a>
+      <br><Br>
+      <div class="fontfam"> <h1>Dale un giro a tu beleza y unete a las filas de Byestres</h1>
+       </div>
       <div class="fontfam">20% de descuento en todos nuestros servicios</div>
+      <br><br>
+      <a class="btn btn-primary">Programa tu cita</a>
     </div>
   </section>
   
-
   <section id="salon"> 
+<br>
     <div class="titulo">Nuestros servicios</div>
     <br>
     <div class="flex-container">
@@ -75,9 +78,9 @@
       </div>
     </div>
   </section>
-  <div class="titulo">Quienes somos</div>
-  <br>
+
   <section id="about">
+    <div class="titulo">Quienes somos</div>
     <div class="about-wrapper">
       <div class="about-text">
         <div class="fontfam"><h2>Somos una empresa dedicada a servicios de belleza</h2>
@@ -90,10 +93,10 @@
     </div>
     </div>
   </section>
-
   </div>
   </div>
   </section>
+
   <section id="contact">
     <div class="contact-container">
       <div class="contact-img">
@@ -101,7 +104,6 @@
       </div>
 
       <div class="form-container">
-        <br>
         <h2>Escribenos</h2>
         <input type="text" placeholder="Tu nombre" />
         <input type="email" placeholder="Correo electronico" />
